# An-Agentic-Multimodal-AI-Framework-for-Real-Time-Scene-Understanding

./: .gitignore  Dockerfile  README.md  ai_agent.py  camera_stream.py  how_to_run.py  main.py  motion_detector.py  object_detector.py  perception_loop.py  pyproject.toml  railway.toml  render.yaml  requirements.txt  scene_memory.py  start.ps1  tools.py
.claude/: settings.local.json
backend/: .env.example  main.py  requirements.txt
backend/agent/: graph.py  intent_router.py  nodes.py  tools.py
backend/services/: activity_log.py  camera_stream.py  motion_detector.py  object_detector.py  perception_loop.py  ppe_detector.py  speech_to_text.py  text_to_speech.py
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.backup.js  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: AudioRecorder.jsx  CameraFeed.jsx  ChatPanel.jsx
frontend/src/hooks/: useWebSocket.js
