[project]
name = "agentic-multimodal-genai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "elevenlabs>=2.23.0",
    "fastapi>=0.121.2",
    "google-generativeai>=0.8.6",
    "gradio>=5.49.1",
    "groq>=0.35.0",
    "gtts>=2.5.4",
    "langchain>=1.2.15",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.0.0",
    "langchain-groq>=1.1.2",
    "langgraph>=0.6.10",
    "ngrok>=1.7.0",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "speechrecognition>=3.14.3",
    "uvicorn>=0.38.0",
]
